MDEV-5544 Custom errors (generated from storage engine) not getting returned by mariadb